--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Capacitación en R y herramientas de productividad</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2020-11-11" />
+    <meta name="date" content="2021-04-07" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -26,7 +26,7 @@ class: center, middle
 
 ## Procesamiento de bases de datos (3)
 
-### Noviembre 2020
+### Abril 2021
 
 
 
@@ -891,6 +891,13 @@ mi_cumple &lt;- as.Date("12-06-1985"); str(mi_cumple)
 
 ```r
 library(anytime)
+```
+
+```
+## Warning: package 'anytime' was built under R version 4.0.3
+```
+
+```r
 mi_cumple &lt;- as.Date(anydate("12-06-1985")); str(mi_cumple) 
 ```
 
@@ -933,7 +940,7 @@ Sys.Date() # La fecha de hoy
 ```
 
 ```
-## [1] "2020-11-11"
+## [1] "2021-04-07"
 ```
 
 ```r
@@ -941,7 +948,7 @@ Sys.time() # el momento exacto, con fecha, horas, minutos y segundos
 ```
 
 ```
-## [1] "2020-11-11 09:42:38 -03"
+## [1] "2021-04-07 21:28:32 -04"
 ```
 
 ---
@@ -965,7 +972,7 @@ today()
 ```
 
 ```
-## [1] "2020-11-11"
+## [1] "2021-04-07"
 ```
 
 ```r
@@ -973,7 +980,7 @@ now()
 ```
 
 ```
-## [1] "2020-11-11 09:42:39 -03"
+## [1] "2021-04-07 21:28:32 -04"
 ```
 
 --
@@ -1263,7 +1270,7 @@ today() - ymd("1985-06-12")
 ```
 
 ```
-## Time difference of 12936 days
+## Time difference of 13083 days
 ```
 
 --
@@ -1289,7 +1296,7 @@ today() + years(1) + months(1)
 ```
 
 ```
-## [1] "2021-12-11"
+## [1] "2022-05-07"
 ```
 
 ---
@@ -1653,7 +1660,7 @@ class: center, middle
 
 ## Procesamiento de bases de datos (3)
 
-### Noviembre 2020
+### Abril 2021
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
