--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Mini-ejercicio 1 
+# Ejercicio express 1 
 
 ## Ahora ustedes...
 
@@ -608,7 +608,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Mini-ejercicio 1 
+# Ejercicio express 1 
 
 --
 
@@ -637,7 +637,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Mini-ejercicio 1: solución
+# Ejercicio express 1: solución
 
 --
 
@@ -948,7 +948,7 @@ Sys.time() # el momento exacto, con fecha, horas, minutos y segundos
 ```
 
 ```
-## [1] "2021-04-07 21:28:32 -04"
+## [1] "2021-04-07 22:54:30 -04"
 ```
 
 ---
@@ -980,7 +980,7 @@ now()
 ```
 
 ```
-## [1] "2021-04-07 21:28:32 -04"
+## [1] "2021-04-07 22:54:31 -04"
 ```
 
 --
@@ -1136,7 +1136,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Mini-ejercicio 2
+# Ejercicio express 2
 
 --
 &lt;br/&gt;
@@ -1159,7 +1159,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Mini-ejercicio 2: solución
+# Ejercicio express 2: solución
 
 --
 
@@ -1464,7 +1464,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Mini-ejercicio 3
+# Ejercicio express 3
 
 --
 &lt;br/&gt;
@@ -1496,7 +1496,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Mini-ejercicio 3
+# Ejercicio express 3
 
 
 1- Generar "dif_days".
@@ -1572,7 +1572,7 @@ background-position: 100% 0%
 
 --
 
-En el archivo "nacimientos.rar" que se encuentra disponible en la carpeta **'data/tarea' en la sesion 4 de nuestro canal en Teams (Generación II)**, encontrarán las siguientes bases de datos:
+En el archivo "nacimientos.rar" que se encuentra disponible en la carpeta **'data/tarea' en la sesion 4 de nuestro canal en Teams**, encontrarán las siguientes bases de datos:
 
 --
 
