correccion planteamiento ejercicio 1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Capacitación en R y herramientas de productividad</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2021-05-20" />
+    <meta name="date" content="2021-05-26" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -622,7 +622,7 @@ Utilizando las bases `artists` y `bands`.
 
 --
 
-1- Generar una base de datos que contenga *first* (nombre), *last* (apellido) y la banda (*band*), para **todos** los artistas presentes en la base `artists`.
+1- Generar una base de datos que contenga *first* (nombre), *last* (apellido), *instrument* (instrumento) y la banda (*band*), para **todos** los artistas presentes en la base `artists`.
 
 --
 
@@ -939,7 +939,7 @@ Sys.Date() # La fecha de hoy
 ```
 
 ```
-## [1] "2021-05-20"
+## [1] "2021-05-26"
 ```
 
 ```r
@@ -947,7 +947,7 @@ Sys.time() # el momento exacto, con fecha, horas, minutos y segundos
 ```
 
 ```
-## [1] "2021-05-20 16:27:18 -04"
+## [1] "2021-05-26 01:35:08 -04"
 ```
 
 **Nota:** El -4 refiere a la diferencia con GMT - Greenwich Mean Time
@@ -973,7 +973,7 @@ today()
 ```
 
 ```
-## [1] "2021-05-20"
+## [1] "2021-05-26"
 ```
 
 ```r
@@ -981,7 +981,7 @@ now()
 ```
 
 ```
-## [1] "2021-05-20 16:27:18 -04"
+## [1] "2021-05-26 01:35:08 -04"
 ```
 
 --
@@ -1271,7 +1271,7 @@ today() - ymd("1985-06-12")
 ```
 
 ```
-## Time difference of 13126 days
+## Time difference of 13132 days
 ```
 
 --
@@ -1297,7 +1297,7 @@ today() + years(1) + months(1)
 ```
 
 ```
-## [1] "2022-06-20"
+## [1] "2022-06-26"
 ```
 
 ---
